# main.go
@@ -7,12 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	_ "github/runzhliu/log-server/docs"
+	_ "github/runzhliu/container-log-server/docs"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/client-go/kubernetes"
 	"k8s.io/client-go/rest"
 	"os"
 )
+
+var namespace = os.Getenv("POD_NAMESPACE")
+var serverLabel = "app=file-server-ds"
+var nodeField = "spec.nodeName="
 
 func getFileServerPodIp(nodeName string) string {
 	// creates the in-cluster config
@@ -25,7 +29,7 @@ func getFileServerPodIp(nodeName string) string {
 	if err != nil {
 		panic(err.Error())
 	}
-	pod, err := clientset.CoreV1().Pods("kube-system").List(context.TODO(), metav1.ListOptions{LabelSelector: "app=file-server-ds", FieldSelector: "spec.nodeName=" + nodeName})
+	pod, err := clientset.CoreV1().Pods(namespace).List(context.TODO(), metav1.ListOptions{LabelSelector: serverLabel, FieldSelector: nodeField + nodeName})
 	if err != nil {
 		panic(err.Error())
 	} else {
@@ -40,7 +44,7 @@ func getFileServerPodIp(nodeName string) string {
 // @Param pod query string true "Pod名" default(test-a)
 // @Param container query string true "容器名" default(test)
 // @Param log query string true "日志名" default(test.log)
-// @Router /v1/log [get]
+// @Router /v1/log/download [get]
 func run(c *gin.Context) {
 	host := c.Request.URL.Query().Get("host")
 	pod := c.Request.URL.Query().Get("pod")
@@ -69,12 +73,46 @@ func run(c *gin.Context) {
 	c.File(fmt.Sprintf("/app/%s", resp.Filename))
 }
 
-// @title log-server API
+// @Summary k8s日志清单接口
+// @Description 注意参数格式
+// @Accept json
+// @Param host query string true "母机节点" default(10.9.70.1)
+// @Param pod query string true "Pod名" default(test-a)
+// @Param container query string true "容器名" default(test)
+// @Router /v1/log/list [get]
+func list(c *gin.Context) {
+	host := c.Request.URL.Query().Get("host")
+	pod := c.Request.URL.Query().Get("pod")
+	container := c.Request.URL.Query().Get("container")
+
+	fileServerPod := getFileServerPodIp(host)
+	url := fmt.Sprintf("http://%s/%s/flume/%s/%s", fileServerPod, pod, container)
+
+	// create client
+	client := grab.NewClient()
+	req, _ := grab.NewRequest(".", url)
+
+	resp := client.Do(req)
+
+	// set header
+	c.Writer.Header().Add("Content-Disposition", fmt.Sprintf("attachment; filename=%s", resp.Filename))
+	c.Writer.Header().Add("Content-Type", "application/octet-stream")
+
+	// check for errors
+	if err := resp.Err(); err != nil {
+		fmt.Fprintf(os.Stderr, "Download failed: %v\n", err)
+		os.Exit(1)
+	}
+
+	c.File(fmt.Sprintf("/app/%s", resp.Filename))
+}
+
+// @title container-log-server API
 // @version 1.0
 // @description k8s本地日志服务器
 // @termsOfService http://swagger.io/terms/
 
-// @contact.name drummerliu
+// @contact.name runzhliu
 // @contact.email runzhliu@163.com
 
 // @license.name Apache 2.0
@@ -82,9 +120,10 @@ func run(c *gin.Context) {
 func main() {
 	r := gin.Default()
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	apiV1 := r.Group("/v1")
+	apiV1 := r.Group("/v1/log")
 	{
-		apiV1.GET("/log", run)
+		apiV1.GET("/download", run)
+		apiV1.GET("/list", list)
 	}
 	r.Run()
 }
